resources/external-dns.yml
---
# Deployment for ExternalDNS
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: default
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.1
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=brians.computer
            - --domain-filter=local.brians.computer
            - --log-level=debug
            - --provider=cloudflare
            - --cloudflare-dns-records-per-page=5000
