resources/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-test
spec:
  containers:
    - name: test-container
      image: busybox
      command: [ "sleep", "3600" ]  # Keeps the pod running
      volumeMounts:
        - mountPath: "/data"
          name: storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: nfs-pvc
