resources/external-dns-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test-app.local.brians.computer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: test-app
